SOLR-15154: Fix Bad merge